Cleanup JVM options
- Remove +UseCompressedOops (on by default on 64 bit JVM)
- Enabled +TieredCompilation as suggested by Ali
- ONOS_DEBUG mode outputs gc and compilation logs
- Output final JVM flags to stdout log file
- Cosmetic fixes

Change-Id: I4128f54b75aa59ad4da781cadb9a4ae1791184d3